--- a/teste.html
+++ b/teste.html
@@ -13,7 +13,7 @@
             margin: 0;
             font-family: Arial, sans-serif;
 			color: black;
-			background-color: black;
+			background-color: #fefefe;
         }
         .message {
             text-align: center;
