--- a/sem_imagem.html
+++ b/sem_imagem.html
@@ -17,13 +17,14 @@
         }
         .message {
             text-align: center;
-	    font-size: 2rem;
+	    font-size: 1.5rem;
         }
     </style>
 </head>
 <body>
     <div class="message">
         <p>Este tipo de exame não possui visualização de imagens.</p>
+	<p>Para visualização das imagens, favor entrar em contato diretamente com o setor de Cintilografia.</p>
     </div>
 </body>
 </html>
