--- a/sem_imagem.html
+++ b/sem_imagem.html
@@ -23,7 +23,7 @@
 </head>
 <body>
     <div class="message">
-        <p>Este tipo de exame não possui visualização de imagens.</p>
+        <p>Este tipo de exame permite visualização apenas do laudo dentro do sistema PEP.</p>
 	<p>Para visualização das imagens, favor entrar em contato diretamente com o setor de Cintilografia.</p>
     </div>
 </body>
